- refactoring - downloading - direct url choice